--- a/css/ibm-cds.css
+++ b/css/ibm-cds.css
@@ -41,3 +41,8 @@ a {
   color: #222222 !important; }
 .reveal pre {
   font-size: 1em; }
+
+  .reveal i.fa{
+      font-family: 'FontAwesome';
+      font-style: normal;
+  }
