Add my face to my slides

--- a/css/ibm-cds.css
+++ b/css/ibm-cds.css
@@ -46,3 +46,6 @@ a {
       font-family: 'FontAwesome';
       font-style: normal;
   }
+.reveal .backgrounds {
+  background: url('../images/home-main-bg.jpg')
+}
